--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,8 @@ slack_push = { git = "https://github.com/mockersf/slack-push" }
 serde = { version = "1.0", features = [ "derive" ] }
 serde_json = "1.0"
 urlencoding = "1.0"
+
+[profile.release]
+lto = true
+codegen-units = 1
+panic = 'abort'
