--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 
 [dependencies]
 reqwest = "0.9"
-concourse-resource = { git = "https://github.com/mockersf/concourse-resource-rs" }
+concourse-resource = "0.1"
 slack_push = { git = "https://github.com/mockersf/slack-push" }
 serde = { version = "1.0", features = [ "derive" ] }
 serde_json = "1.0"
