--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 
 [dependencies]
 reqwest = { version = "0.11", features = [ "blocking", "json" ] }
-concourse-resource = "0.2"
+concourse-resource = { git = "https://github.com/aoldershaw/concourse-resource-rs", branch = "add-instance-vars" }
 slack_push = { git = "https://github.com/mockersf/slack-push" }
 serde = { version = "1.0", features = [ "derive" ] }
 serde_json = "1.0"
